@@ -5,6 +5,7 @@
 
 
 
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // SMTP email setup (if needed...MUST RUN AFTER dynamic app config management)
 // To be safe, don't use trim() on certain strings with arbitrary non-alphanumeric characters here
 if ( $app_config['smtp_email_login'] != '' && $app_config['smtp_email_server'] != '' ) {
@@ -20,9 +21,11 @@ global $smtp_vars; // Needed for class compatibility (along with second instance
 $smtp = new SMTPMailer();
 
 }
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Sending yourself telegram messages (alerts etc), with a telegram bot (if needed...MUST RUN AFTER dynamic app config management)
 if ( $telegram_activated == 1 ) {
 
@@ -34,6 +37,46 @@ $telegram_bot = new Telegram\Bot($app_config['telegram_bot_token'], $app_config[
 $telegram_messaging = new Telegram\Receiver($telegram_bot);
 
 }
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+
+
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+// Google API (google home / translate APIs)
+if ( $app_config['google_home_application_name'] != '' && $app_config['google_home_client_id'] != '' && $app_config['google_home_client_secret'] != '' && $webhook_key != '' ) {
+
+// Based off: https://www.phpflow.com/php/php-web-application-authentication-using-google-oauth-2-0/
+
+// Load class files
+require_once($base_dir . '/app-lib/php/classes/google-api/vendor/autoload.php');
+ 
+// GOOGLE HOME
+//Create and Request to access Google API 
+// We are using push notifications for the price alerts 
+// (after firewalling the raspi with it's own subnetwork / WAP device, 
+// and creating an authenticated google API action with our dynamic ip's URI)
+// https://developers.google.com/assistant/engagement/notifications
+// https://www.reddit.com/r/GoogleAssistantDev/comments/eptoha/need_google_home_api_authentication_locally_for/
+
+
+// Google client instance
+$google_client = new Google_Client();
+
+// Google app details (https://developers.google.com/assistant/engagement/notifications)
+$google_client->setApplicationName($app_config['google_home_application_name']);
+$google_client->setClientId($app_config['google_home_client_id']);
+$google_client->setClientSecret($app_config['google_home_client_secret']);
+$google_client->setRedirectUri($base_url . 'webhook/' . $webhook_key);
+
+// Google 0auth instance
+$google_0auth = new Google_Service_Oauth2($google_client);
+
+
+// GOOGLE TRANSLATE
+// (NOT BUILT YET)
+
+}
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
  
