@@ -28,6 +28,21 @@ RewriteEngine on
   </IfModule>
 
 
+####~~~~~~Pretty links START~~~~~~####
+
+# (#IN CASE 'MultiViews' IS ENABLED#, WE ARE USING COMPLETELY DIFFERENT NAME(S) COMPARED TO EXISTING FILES / DIRECTORIES)
+
+# Webhooks
+RewriteCond %{REQUEST_URI} hook/(.*) [NC]
+RewriteRule hook/(.*)/(.*)$ web-hook.php?webhook_mode=$1&webhook_key=$2 [NC,L]
+
+# API
+RewriteCond %{REQUEST_URI} api/(.*) [NC]
+RewriteRule api/(.*)/(.*)$ web-api.php?data_set=$1&data_selection=$2 [NC,L]
+
+####~~~~~~Pretty links END~~~~~~####
+
+
 </IfModule>
 
 ###########################################################
