@@ -3119,6 +3119,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Misc. minor UX revisions
 
+-Initial API / Webhook support
+
 IMPORTANT UPGRADE NOTES: 
 
 v4.08.4 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USED" SYSTEM STATS (WHICH #NOW# CORRECTLY DOES NOT INCLUDE MEMORY BUFFERS / CACHE). SYSTEM STATS CHARTS AFTER UPGRADE TO v4.09.0 OR HIGHER WILL STILL RETAIN OLD SYSTEM STATS DATA FOR MEMORY USAGE, BUT WILL BE LABELED DIFFERENTLY ("USED MEMORY" INSTEAD OF "FREE MEMORY"). JUST IGNORE THE OLDER MEMORY DATA, OR RESET YOUR SYSTEM STATS CHARTS BY DELETING: /cache/charts/system/
